# socratadata

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE.html  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  air.toml  authors.html  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml
R/: extendr-wrappers.R  import-standalone-obj-type.R  import-standalone-types-check.R  links.R  list_socrata.R  read_socrata.R  req_v2.R  req_v3.R  soc_discover.R  soc_list.R  soc_metadata.R  soc_query.R  soc_read.R
inst/httptest2/: redact.R
man/: list_socrata.Rd  read_socrata.Rd  soc_discover.Rd  soc_list.Rd  soc_metadata.Rd  soc_query.Rd  soc_read.Rd
news/: index.html
reference/: index.html  list_socrata.html  read_socrata.html  soc_discover.html  soc_list.html  soc_metadata.html  soc_query.html  soc_read.html
src/: Makevars.in  Makevars.win.in  entrypoint.c  socratadata-win.def
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/src/: lib.rs  parse.rs  process.rs
tests/: testthat.R
tests/testthat/: helper.R  test-parse_data_json.R  test-read_socrata.R  test-soc_discovery.R  test-soc_metadata.R  test-soc_query.R  test-soc_read.R
tests/testthat/_snaps/: soc_metadata.md
tests/testthat/read_socrata/soda.demo.socrata.com/resource/: 2646-ez2p.json-5a6e83.R  2646-ez2p.json-cfaed3.R  6yvf-kk3n.json-5a6e83.R  6yvf-kk3n.json-cfaed3.R
tests/testthat/soc_metadata/soda.demo.socrata.com/d/: 2646-ez2p-HEAD.R  2646-ez2p.R  2646-ez2p.html
tests/testthat/soc_query/soda.demo.socrata.com/d/: 2asz-g9qq-4aa655-POST.R  2asz-g9qq-639e3d-POST.R  (+12 more)
(+178 files in other folders)
