[package]
name = 'socratadata'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'socratadata'

[dependencies]
extendr-api = '0.8.1'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"

[profile.release]
lto = true
codegen-units = 1
